--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,6 +14,6 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.exclusion=coverage/**, node_modules/**, testing/**
+sonar.exclusions=coverage/**, node_modules/**, testing/**
 
 sonar.javascript.lcov.reportPath=coverage/lcov.info
