adding directory scanner

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,4 +16,6 @@ sonar.sourceEncoding=UTF-8
 
 sonar.exclusions=coverage/**, node_modules/**, testing/**
 
+sonar.test=testing/
+
 sonar.javascript.lcov.reportPath=coverage/lcov.info
