--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,6 +16,6 @@ sonar.sourceEncoding=UTF-8
 
 sonar.exclusions=coverage/**, node_modules/**, testing/**
 
-sonar.test=testing/
+#sonar.test=testing/
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
