apply docker-compose part-2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   apps:
     context: apps
-    dockerfile: ../
+    dockerfile: ../Dockerfile
     build: ./apps
     ports:
       - "10000:3000"
