--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   apps:
-    context: apps
-    dockerfile: ../Dockerfile
-    build: ./apps
+    build:
+      context: apps
+      dockerfile: ../
     ports:
       - "10000:3000"
     restart: always
