--- a/apps/sonar-project.properties
+++ b/apps/sonar-project.properties
@@ -14,8 +14,8 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.exclusions=coverage/**, node_modules/**, testing/**
+sonar.exclusions=apps/coverage/**, node_modules/**, testing/**
 
 #sonar.test=testing/
 
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=apps/coverage/lcov.info
