edit exclusion on sonar-project.properties

--- a/apps/sonar-project.properties
+++ b/apps/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.exclusions=apps/coverage/**, node_modules/**, testing/**
+sonar.exclusions= apps/coverage/**, apps/coverage/**, node_modules/**, apps/testing/**, Dockerfile
 
 #sonar.test=testing/
 
