--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   apps:
-    build:
-      context: apps
-      dockerfile: ../Dockerfile
+#    build:
+#      context: apps
+#      dockerfile: ../Dockerfile
     ports:
       - "10000:3000"
     restart: always
