--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   apps:
-#    build:
+    build: ./apps
 #      context: apps
 #      dockerfile: ../Dockerfile
     ports:
       - "10000:3000"
     restart: always
-    env_file: .env
+    env_file: ./apps/.env
